# coachingsales

./: connectionrequestordb.py  conversationopener.py  dbcreation.py  pyproject.toml  saymore.py
v1/: clairtycall.py  coachingopener.py  connectionrequestor.py
v2/: azure_config.json  bot.py  dbcreate.py
