[tool.poetry]
name = "linkedin-connection-automation"
version = "0.1.0"
description = "Automate sending LinkedIn connection requests with personalized introduction messages based on recent employment history."
authors = ["Your Name <yourname@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
linkedin-api = "^0.3.3"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

